--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -9,9 +9,11 @@ figure:
 template:
   bootstrap: 5
   light-switch: true
-  opengraph:
-    image:
+  # opengraph:
+    # image:
       # src: man/figures/logo.svg
-      alt: "CentroidR"
+      # alt: "CentroidR"
+  params:
+    google_site_verification: Bt77rpBuC_R-0p62TWtA_ba5rvx-PuSEMv4LHg1UsOo
 
 url: https://adafede.github.io/CentroidR
