--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -71,68 +71,68 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  build-arm64:
-    runs-on: warp-ubuntu-latest-arm64-2x
-    steps:
-      - name: Checkout code
-        uses: actions/cache@v4
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+  # build-arm64:
+  #   runs-on: warp-ubuntu-latest-arm64-2x
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/cache@v4
+  #       with:
+  #         path: /tmp/.buildx-cache
+  #         key: ${{ runner.os }}-buildx-${{ github.sha }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-buildx-
 
-      - name: Prepare
-        run: |
-          echo "PLATFORM_PAIR=linux-arm64" >> $GITHUB_ENV
+  #     - name: Prepare
+  #       run: |
+  #         echo "PLATFORM_PAIR=linux-arm64" >> $GITHUB_ENV
       
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY_IMAGE }}
+  #     - name: Docker meta
+  #       id: meta
+  #       uses: docker/metadata-action@v5
+  #       with:
+  #         images: ${{ env.REGISTRY_IMAGE }}
       
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+  #     - name: Set up QEMU
+  #       uses: docker/setup-qemu-action@v3
       
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
       
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  #     - name: Login to Docker Hub
+  #       uses: docker/login-action@v3
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build and push by digest
-        id: build
-        uses: docker/build-push-action@v6
-        with:
-          platforms: linux/arm64
-          labels: ${{ steps.meta.outputs.labels }}
-          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
-          cache-from: type=registry,ref=${{ env.REGISTRY_IMAGE }}:buildcache-arm64
-          cache-to: type=registry,ref=${{ env.REGISTRY_IMAGE }}:buildcache-arm64,mode=max
+  #     - name: Build and push by digest
+  #       id: build
+  #       uses: docker/build-push-action@v6
+  #       with:
+  #         platforms: linux/arm64
+  #         labels: ${{ steps.meta.outputs.labels }}
+  #         outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+  #         cache-from: type=registry,ref=${{ env.REGISTRY_IMAGE }}:buildcache-arm64
+  #         cache-to: type=registry,ref=${{ env.REGISTRY_IMAGE }}:buildcache-arm64,mode=max
       
-      - name: Export digest
-        run: |
-          mkdir -p /tmp/digests
-          digest="${{ steps.build.outputs.digest }}"
-          touch "/tmp/digests/${digest#sha256:}"
+  #     - name: Export digest
+  #       run: |
+  #         mkdir -p /tmp/digests
+  #         digest="${{ steps.build.outputs.digest }}"
+  #         touch "/tmp/digests/${digest#sha256:}"
       
-      - name: Upload digest
-        uses: actions/upload-artifact@v4
-        with:
-          name: digests-linux-arm64
-          path: /tmp/digests/*
-          if-no-files-found: error
-          retention-days: 1
+  #     - name: Upload digest
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: digests-linux-arm64
+  #         path: /tmp/digests/*
+  #         if-no-files-found: error
+  #         retention-days: 1
 
   merge:
     runs-on: ubuntu-latest
     needs:
       - build-amd64
-      - build-arm64
+      # - build-arm64
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
