--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Depends:
     R (>= 4.3.0)
 Imports:
     logger (>= 0.4.0),
-    MSnbase (>= 2.28.1)
+    MSnbase (>= 2.28.1),
+    ProtGenerics (>= 1.34.0)
 Suggests: 
     BiocManager,
     knitr,
