--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,8 +24,10 @@ Depends:
 Imports:
     logger (>= 0.4.0),
     MSnbase (>= 2.28.1),
-    mzR (>= 2.40.0),
+    mzR (>= 2.39.0),
     ProtGenerics (>= 1.34.0)
+Remotes:
+    sneumann/mzR
 Suggests: 
     R.utils,
     testthat
