--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,10 +23,9 @@ Depends:
     R (>= 4.3.0)
 Imports:
     logger (>= 0.4.0),
-    MSnbase (>= 2.28.1),
     mzR (>= 2.39.0),
     optparse (>= 1.7.5),
-    ProtGenerics (>= 1.34.0)
+    Spectra (>= 1.12.0)
 Remotes:
     sneumann/mzR
 Suggests: 
