--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Authors@R: c(
            comment = c(ORCID = "0000-0002-6977-7147"))
   )
 Maintainer: Adriano Rutz <adafede@gmail.com>
-Description: CentroidR provides the infrastructure to centroid profile spectra
+Description: CentroidR provides the infrastructure to centroid profile spectra.
 License: GPL (>= 3)
 URL: https://github.com/adafede/CentroidR,
     https://adafede.github.io/CentroidR
