--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,10 +26,12 @@ Imports:
     MsCoreUtils (>= 1.18.0),
     mzR (>= 2.40.0),
     optparse (>= 1.7.5),
+    purrr (>= 1.0.4),
     Spectra (>= 1.16.1)
 Suggests: 
-    R.utils,
-    testthat
+    R.utils (>= 2.13.0),
+    rlang (>= 1.1.6),
+    testthat (>= 3.2.3)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
