--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -164,7 +164,7 @@ jobs:
           docker buildx imagetools create \
           -t "${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}" \
           -t "${{ env.REGISTRY_IMAGE }}:latest" \
-          "$(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON")" \
+          "$(jq -cr '.tags | map(\"-t \" + .) | join(\" \")' <<< "$DOCKER_METADATA_OUTPUT_JSON")" \
           "$(printf '${{ env.REGISTRY_IMAGE }}@sha256:%s ' *)"
 
       - name: Inspect image
