optimize Docker image

--- a/inst/Dockerfile
+++ b/inst/Dockerfile
@@ -4,7 +4,7 @@ FROM bioconductor/bioconductor_docker:RELEASE_3_21-R-4.5.0
 RUN Rscript -e "devtools::install_github('adafede/CentroidR')"
 # RUN Rscript -e "install.packages('CentroidR', repos = c('https://adafede.r-universe.dev', 'https://bioc.r-universe.dev', 'https://cran.r-universe.dev'))"
 
-# Set default working directory and copy the script
+# Copy the script
 COPY inst/scripts/centroiding.R centroiding.R
 
 # Define default command
