--- a/altdoc/quarto_website.yml
+++ b/altdoc/quarto_website.yml
@@ -15,8 +15,6 @@ website:
     logo-alt: CentroidR logo
     search: true
     left:
-      # - text: Functions
-      #   href: ./man
       - text: News
         file: $ALTDOC_NEWS
       - text: License
@@ -30,9 +28,10 @@ website:
 
 format:
   html:
+    grid:
+      body-width: 1200px
     respect-user-color-scheme: true
     toc: true
     theme:
       light: flatly
       dark: darkly
-    # number-sections: false
