--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,6 +31,7 @@ Imports:
     Spectra (>= 1.16.1)
 Suggests: 
     altdoc (>= 0.5.0),
+    BiocManager (>= 1.30.25),
     grateful (>= 0.2.12),
     R.utils (>= 2.13.0),
     rlang (>= 1.1.6),
