--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Imports:
 Suggests: 
     altdoc (>= 0.5.0),
     BiocManager (>= 1.30.25),
+    BiocVersion (>= 3.21.0),
     grateful (>= 0.2.12),
     R.utils (>= 2.13.0),
     rlang (>= 1.1.6),
